repositories/vestas/neuron-ml/k8s/train/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: traefik
  rules:
    - host: training-neuron-dev.neuron-azweu-dev.vks.vestas.net
      http:
        paths:
          - backend:
              service:
                name: service
                port:
                  number: 8000
            path: /
            pathType: Prefix
